# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.411 2005/12/01 21:29:30 rocket Exp $

  01 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  Fix folder name for grp build dir to not have .tar.bz2 at the end

  01 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.conf,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Add md5 and sha .digests file creation per wolf31o2's feature request

  30 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst-2.0_rc2.

  30 Nov 2005; Eric Edgar <rocket@gentoo.org> examples/stage4_template.spec,
  files/catalyst.conf, modules/generic_stage_target.py,
  modules/livecd_stage1_target.py:
  Fix livecd-stage1 livecd use flag bug; stage4 doc cleanups;autoresume points
  after each successful kernel build;add autoresume documentation to
  catalyst.conf

  30 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-fs-runscript.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-combine.sh, targets/netboot/netboot-controller.sh,
  targets/stage1/stage1-chroot.sh, targets/stage4/stage4-controller.sh,
  targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
  targets/support/create-iso.sh, targets/support/filesystem-functions.sh,
  targets/support/functions.sh, targets/support/kill-chroot-pids.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh,
  targets/support/rc-update.sh:
  Changed multiple spaces to tabs to satisfy my OCD.

  29 Nov 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh:
  Bumped genkernel detection to require 3.3.0 or higher

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/netboot/netboot-controller.sh: